--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,9 @@ server.port=8083
 spring.datasource.url=jdbc:mysql://localhost:3306/PatientDB?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.mvc.format.date=yyyy-MM-dd
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 #spring.thymeleaf.cache=false
